@@ -1,5 +1,9 @@
 2019-10-14  Wilco Dijkstra  <wdijkstr@arm.com>
 
+	* config/arm/arm.c (arm_legitimize_address): Remove Thumb-2 bailout.
+
+2019-10-14  Wilco Dijkstra  <wdijkstr@arm.com>
+
 	* config/arm/arm.c (arm_option_override): Don't override sched
 	pressure algorithm.
 
